# sdca-raqqr

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: make_quickstart_gif.py  plot_equity.py
examples/: quickstart.py
pages/: signal_builder.py
parity/: dump_js_bands.mjs  golden_bands.json
sdca_core/: __init__.py  api.py  coefficients.py
sdca_core/backtest/: __init__.py  curve.py  metrics.py
sdca_core/data/: __init__.py  loaders.py
sdca_core/models/: __init__.py  raqqr.py
sdca_core/signals/: __init__.py  composite.py  eqm.py
sdca_core/signals/mltpi/: __init__.py  pipeline.py
sdca_core/signals/mltpi/indicators/: __init__.py  agma.py  gstX.py  momentumX.py  qtrend.py  trendZ.py  zscoreMA.py
tests/: test_raqqr_parity.py  test_signals_backtest.py
