[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdca-core"
version = "0.1.0"
description = "Python parity port of the Bitcoin RAQQR (Asymmetric Tail Curvature) rainbow valuation model and accumulation/distribution DCA backtest."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0"]

[project.optional-dependencies]
binance = ["requests>=2.28"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["sdca_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
